# fixNES_cmake

./: .gitignore  CMakeLists.txt
src/: common.h  main.c
